--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,38 +1,17 @@
-.container {
-    margin: 0 auto;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .title {
-    font-family:
-      'Quicksand',
-      'Source Sans Pro',
-      -apple-system,
-      BlinkMacSystemFont,
-      'Segoe UI',
-      Roboto,
-      'Helvetica Neue',
-      Arial,
-      sans-serif;
-    display: block;
-    font-weight: 300;
-    font-size: 100px;
-    color: #35495e;
-    letter-spacing: 1px;
-  }
-  
-  .subtitle {
-    font-weight: 300;
-    font-size: 42px;
-    color: #526488;
-    word-spacing: 5px;
-    padding-bottom: 15px;
-  }
-  
-  .links {
-    padding-top: 15px;
-  }
+@import "variables";
+@import "utilities";
+@import "mixins";
+
+@import "components/images-group";
+@import "components/buttons";
+@import "components/feature-box";
+@import "components/card";
+
+@import "general";
+@import "animations";
+@import "grid";
+
+// @import "sections/header";
+// @import "sections/about";
+// @import "sections/features";
+// @import "sections/favorites";
