--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,5 +1,5 @@
-.secondary-heading {
-  font-size: 3.6rem;
+.title {
+  font-size: 2.4rem;
   font-weight: 700;
   display: inline-block;
   background-image: linear-gradient(
@@ -11,14 +11,14 @@
   color: transparent;
 }
 
-.tertiary-heading {
+.card-title {
   font-size: 1.8rem;
   font-weight: 400;
   text-transform: uppercase;
 }
 
-.paragraph {
-  font-size: 1.8rem;
+.info {
+  font-size: 1rem;
   &:not(:last-child) {
     margin-bottom: 3rem;
   }
