--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,10 +6,13 @@
 @import "components/buttons";
 @import "components/feature-box";
 @import "components/card";
+@import "components/header";
+@import "components/user-nav";
 
 @import "general";
 @import "animations";
 @import "grid";
+@import "typography";
 
 // @import "sections/header";
 // @import "sections/about";
