--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,7 @@
 @import "components/feature-box";
 @import "components/card";
 @import "components/header";
-@import "components/user-nav";
+@import "components/side-bar";
 
 @import "general";
 @import "animations";
