--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -4,8 +4,23 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%; //1rem = 10px
+html, div#__nuxt {
+  font-family:
+    'Source Sans Pro',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    sans-serif;
+    // font-size: 62.5%; //1rem = 10px
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
 }
 
 body {
