Created layout file for scss

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,6 +13,7 @@
 @import "animations";
 @import "grid";
 @import "typography";
+@import "layout";
 
 // @import "sections/header";
 // @import "sections/about";
