Updated layout scss file

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,3 +1,9 @@
 .general-container {
     display: flex;
+    > nav.sidebar {
+        flex-basis: 20%;
+    }
+    > main {
+        flex-grow: 1;
+    }
 }
