--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -12,9 +12,10 @@
 }
 
 .card-title {
-  font-size: 1.8rem;
-  font-weight: 400;
-  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #444;
+  
 }
 
 .info {
