--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
-$gradient-primary: gold;
-$gradient-secondary: gray;
+$gradient-primary: rgb(24, 180, 231);
+$gradient-secondary: rgb(65, 65, 224);
 $grid-width: 90vw;
 $vertical-space: 16rem;
 $horizontal-space: 12rem;
 $about-section-background-color: rgba(211, 211, 211, 0.199);
-$color-primary: gold;
+$color-primary: rgb(65, 65, 224);
