--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -24,3 +24,14 @@
     margin-bottom: 3rem;
   }
 }
+
+.current-balance-typo {
+  font-size: 1.5rem;
+  color: blue;
+}
+.income-balance-typo {
+  color: green;
+}
+.outcome-balance-typo {
+  color: red;
+}
