Created progress bar component

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "components/side-bar";
 @import "components/credit-card";
 @import "components/balances";
+@import "components/progress-bar";
 
 @import "general";
 @import "animations";
