--- a/assets/scss/sections/_cards-section.scss
+++ b/assets/scss/sections/_cards-section.scss
@@ -10,4 +10,11 @@
             flex-grow: 1;
         }
     }
+    &__bottom-container {
+        display: flex;
+        margin-top: 10px;
+        > div:first-child {
+            flex: 0 0 65%;
+        }
+    }
 }
