--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "components/credit-card";
 @import "components/balances";
 @import "components/progress-bar";
+@import "components/switch";
 
 @import "general";
 @import "animations";
