--- a/assets/scss/sections/_cards-section.scss
+++ b/assets/scss/sections/_cards-section.scss
@@ -13,6 +13,7 @@
     &__bottom-container {
         display: flex;
         margin-top: 10px;
+        justify-content: space-between;
         > div:first-child {
             flex: 0 0 65%;
         }
