--- a/assets/scss/components/_switch.scss
+++ b/assets/scss/components/_switch.scss
@@ -1,46 +1,54 @@
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 20px;
-  > input {
-    width: 0;
-    height: 0;
-    opacity: 0;
-    &:checked + .slider {
-      background-color: #2196f3;
+.switch-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  &__switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    > input {
+      width: 0;
+      height: 0;
+      opacity: 0;
+      &:checked + .slider {
+        background-color: #2196f3;
+      }
+      &:checked + .slider::before {
+        -webkit-transform: translateX(18px);
+        -ms-transform: translateX(18px);
+        transform: translateX(18px);
+      }
+      &:focus + .slider {
+        box-shadow: 0 0 1px #2196f3;
+      }
     }
-    &:checked + .slider::before {
-      -webkit-transform: translateX(18px);
-      -ms-transform: translateX(18px);
-      transform: translateX(18px);
-    }
-    &:focus + .slider {
-      box-shadow: 0 0 1px #2196f3;
-    }
-  }
-  > span.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 34px;
-    &::before {
+    > span.slider {
       position: absolute;
-      content: "";
-      height: 12px;
-      width: 16px;
-      left: 4px;
-      bottom: 4px;
-      background-color: white;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
       -webkit-transition: 0.4s;
       transition: 0.4s;
-      border-radius: 50%;
+      border-radius: 34px;
+      &::before {
+        position: absolute;
+        content: "";
+        height: 12px;
+        width: 16px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+        border-radius: 50%;
+      }
     }
+  }
+  &__info {
+    font-size: .8rem;
   }
 }
