--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,6 +11,7 @@
 @import "components/balances";
 @import "components/progress-bar";
 @import "components/switch";
+@import "components/table";
 
 @import "general";
 @import "animations";
