--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -1,29 +1,16 @@
-@keyframes moveFromLeft {
+@keyframes infinite-pulsation {
   0% {
-    opacity: 0;
-    transform: translateX(-50px);
+    transform: scale(1);
+    box-shadow: none;
   }
-  80% {
-    opacity: 0.8;
-    transform: translateX(20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0px);
-  }
-}
 
-@keyframes moveFromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(50px);
+  50% {
+    transform: scale(1.1);
+    box-shadow: 0 1rem 4rem rgba($color: #000000, $alpha: 0.2);
   }
-  80% {
-    opacity: 0.8;
-    transform: translateX(-20px);
-  }
+
   100% {
-    opacity: 1;
-    transform: translateX(0px);
+    transform: scale(1);
+    box-shadow: none;
   }
 }
