--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,3 +22,4 @@
 @import "sections/dashboard.scss";
 @import "sections/cards-section";
 @import "sections/transaction-history-section";
+@import "sections/goals-section";
