--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import "components/progress-bar";
 @import "components/switch";
 @import "components/table";
+@import "components/goal-card";
 
 @import "general";
 @import "animations";
