--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,3 +24,4 @@
 @import "sections/cards-section";
 @import "sections/transaction-history-section";
 @import "sections/goals-section";
+@import "sections/outcome-statistics-section";
