--- a/assets/scss/sections/_goals-section.scss
+++ b/assets/scss/sections/_goals-section.scss
@@ -1,6 +1,7 @@
 .goals-section {
   padding-left: 10px;
   padding-top: 10px;
+  margin-bottom: .5rem;
   &__title-container {
     display: flex;
     align-items: center;
