--- a/assets/scss/components/_goal-card.scss
+++ b/assets/scss/components/_goal-card.scss
@@ -16,4 +16,12 @@
             font-size: .9rem;
         }
     }
+    &__bottom-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        &--icon {
+            fill: $color-primary;
+        }
+    }
 }
