--- a/assets/scss/components/_progress-bar.scss
+++ b/assets/scss/components/_progress-bar.scss
@@ -17,14 +17,15 @@
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     background-color: $color-primary;
-    background-image: linear-gradient(
-      to center bottom,
-      rgba(43, 194, 83, 0.37),
-      rgba(84, 240, 84, 0.69)
-    );
     overflow: hidden;
     box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
       inset 0 -2px 6px rgba(0, 0, 0, 0.4);
+    &.is-green {
+      background-color: green;
+    }
+    &.is-orange {
+      background-color: orangered;
+    }
     &:after {
       content: "";
       position: absolute;
