--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -39,6 +39,12 @@
   }
 }
 
+.is-percent {
+  &::after {
+    content: '%';
+  }
+}
+
 .current-balance-typo {
   font-size: 1.5rem;
   color: blue;
