Created icons scss file

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,15 +13,15 @@
 @import "components/switch";
 @import "components/table";
 @import "components/goal-card";
+@import "sections/dashboard.scss";
+@import "sections/cards-section";
+@import "sections/transaction-history-section";
+@import "sections/goals-section";
+@import "sections/outcome-statistics-section";
 
 @import "general";
 @import "animations";
 @import "grid";
 @import "typography";
 @import "layout";
-
-@import "sections/dashboard.scss";
-@import "sections/cards-section";
-@import "sections/transaction-history-section";
-@import "sections/goals-section";
-@import "sections/outcome-statistics-section";
+@import "icons";
