Moved infinite-button class to buttons file

--- a/assets/scss/sections/_outcome-statistics-section.scss
+++ b/assets/scss/sections/_outcome-statistics-section.scss
@@ -1,5 +1,6 @@
 .outcome-statistics-section {
   padding-left: 10px;
+  margin-bottom: .5rem;
   &__progress-bar-container {
     &:not(:last-child) {
       margin-bottom: 1px;
