--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -21,3 +21,16 @@
     transform: translateY(0px);
   }
 }
+
+.infinite-button {
+  background-color: rgba(250, 189, 36, 0.856);
+  border: none;
+  border-radius: 25px;
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+  cursor: pointer;
+  &:hover {
+    animation: infinite-pulsation 1s infinite;
+  }
+}
