--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,6 +13,7 @@
 @import "components/switch";
 @import "components/table";
 @import "components/goal-card";
+@import "components/loan-card";
 
 @import "sections/dashboard.scss";
 @import "sections/cards-section";
