--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,7 +1,7 @@
 .general-container {
     display: flex;
     > nav.sidebar {
-        flex-basis: 20%;
+        flex: 0 0 20%;
     }
     > main {
         flex-grow: 1;
