--- a/assets/scss/components/_loan-card.scss
+++ b/assets/scss/components/_loan-card.scss
@@ -9,6 +9,9 @@
   flex-direction: column;
   justify-content: flex-end;
   @include card;
+  @include responsive (largest-bp){
+    justify-content: center;
+  }
   > p {
     color: white;
   }
