Given styles for large-breakpoint

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -16,6 +16,11 @@
       @content;
     }
   }
+  @if $breakpoint == large-bp {
+    @media (max-width: 1050px) {
+      @content;
+    }
+  }
   @if $breakpoint == largest-bp {
     @media (max-width: 1200px) {
       @content;
