Created styles for medium breakpoint

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -16,6 +16,11 @@
       @content;
     }
   }
+  @if $breakpoint == medium-bp {
+    @media (max-width: 900px) {
+      @content;
+    }
+  }
   @if $breakpoint == large-bp {
     @media (max-width: 1050px) {
       @content;
