--- a/assets/scss/components/_side-bar.scss
+++ b/assets/scss/components/_side-bar.scss
@@ -5,6 +5,7 @@
 }
 
 .side-nav {
+  margin-top: 1rem;
   list-style: none;
   @include responsive(large-bp) {
     display: flex;
@@ -16,9 +17,8 @@
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
-
-      @media only screen and (max-width: 900px) {
-        margin: 0;
+      @include responsive(large-bp) {
+        margin-bottom: 0;
       }
     }
     @include responsive(large-bp) {
