--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,47 +1,47 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
 }
 
 .user-nav {
-    align-self: stretch;
-    
+  align-self: stretch;
+
+  display: flex;
+  align-items: center;
+
+  & > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
     display: flex;
     align-items: center;
+  }
 
-    & > * {
-        padding: 0 2rem;
-        cursor: pointer;
-        height: 100%;
-        display: flex;
-        align-items: center;
-    }
+  &__icon-box {
+    position: relative;
+  }
 
-    &__icon-box {
-        position: relative;
-    }
+  &__notification {
+    font-size: 0.8rem;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    background-color: red;
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
 
-    &__notification {
-        font-size: .8rem;
-        height: 1rem;
-        width: 1rem;
-        border-radius: 50%;
-        background-color: red;
-        color: #fff;
-        position: absolute;
-        top: 1.5rem;
-        right: 1.1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    &__user-photo {
-        height: 3.75rem;
-        border-radius: 50%;
-        margin-right: 1rem;
-    }
+  &__user-photo {
+    height: 3.75rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
 }
