--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -3,6 +3,15 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid lightgray;
+  @include responsive(small-bp) {
+    flex-direction: column-reverse;
+  }
+}
+
+.title-wrapper {
+  @include responsive(small-bp) {
+    align-self: flex-start;
+  }
 }
 
 .user-nav {
@@ -43,5 +52,8 @@
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem;
+  }
+  @include responsive(small-bp) {
+    align-self: flex-end;
   }
 }
