--- a/assets/scss/sections/_dashboard.scss
+++ b/assets/scss/sections/_dashboard.scss
@@ -21,11 +21,17 @@
   }
   &__second-column-horizontal-sections {
     display: flex;
+    @include responsive(smallest-bp) {
+      flex-direction: column;
+    }
     > section.new-transaction-section {
       flex: 0 0 70%;
     }
     > div.loan-card {
       flex-grow: 1;
+      @include responsive(smallest-bp) {
+        height: 100px;
+      }
     }
   }
 }
