--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,7 +3,7 @@
 @import "mixins";
 
 @import "components/buttons";
-@import "components/feature-box";
+// @import "components/feature-box";
 @import "components/card";
 @import "components/header";
 @import "components/side-bar";
