--- a/assets/scss/components/_credit-card.scss
+++ b/assets/scss/components/_credit-card.scss
@@ -4,8 +4,8 @@
   justify-content: space-between;
   background-image: linear-gradient(
     to left bottom,
-    rgba($gradient-primary, 0.795),
-    rgba($gradient-secondary, 0.795)
+    $gradient-primary-light,
+    $gradient-primary-dark
   );
   border-radius: 1rem;
   min-height: 160px;
