--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -37,7 +37,7 @@
     height: 1rem;
     width: 1rem;
     border-radius: 50%;
-    background-color: red;
+    background-color: $color-tertiary;
     color: #fff;
     position: absolute;
     top: 1.5rem;
