--- a/assets/scss/components/_progress-bar.scss
+++ b/assets/scss/components/_progress-bar.scss
@@ -16,15 +16,17 @@
     border-bottom-right-radius: 8px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    background-color: $color-primary;
     overflow: hidden;
     box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
       inset 0 -2px 6px rgba(0, 0, 0, 0.4);
-    &.is-green {
-      background-color: green;
+    &.is-primary {
+      background-color: $color-primary;
     }
-    &.is-orange {
-      background-color: orangered;
+    &.is-secondary {
+      background-color: $color-secondary;
+    }
+    &.is-tertiary {
+      background-color: $color-tertiary;
     }
     &:after {
       content: "";
@@ -54,10 +56,10 @@
     }
   }
   &__info-container {
-      display: flex;
-      justify-content: space-between;
-      &--status {
-          font-weight: bold;
-      }
+    display: flex;
+    justify-content: space-between;
+    &--status {
+      font-weight: bold;
+    }
   }
 }
