--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -7,7 +7,7 @@
     $gradient-primary-light,
     $gradient-primary-dark
   );
-  -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
