--- a/assets/scss/sections/_cards-section.scss
+++ b/assets/scss/sections/_cards-section.scss
@@ -2,7 +2,7 @@
   @include card;
   &__top-container {
     display: flex;
-    > div.credit-card {
+    > div:first-child {
       flex: 0 0 65%;
     }
     > div.balances {
