--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,27 +1,3 @@
-.btn-text {
-  &:link,
-  &:visited {
-    color: $color-primary;
-    display: inline-block;
-    text-decoration: none;
-    border-bottom: 1px solid $color-primary;
-    padding: 3px;
-    transition: all 0.4s;
-  }
-
-  &:hover {
-    background-color: $color-primary;
-    color: white;
-    box-shadow: 0 2rem 4rem rgba(black, 0.15);
-    transform: translateY(-2px);
-  }
-
-  &:active {
-    box-shadow: 0 1rem 2rem rgba(black, 0.15);
-    transform: translateY(0px);
-  }
-}
-
 .infinite-button {
   background-color: rgba(250, 189, 36, 0.856);
   border: none;
@@ -37,4 +13,8 @@
   border-radius: 25px;
   margin-left: 5px;
   font-weight: bold;
+}
+
+.VueCarousel-navigation-button {
+  color: $color-primary !important;
 }
