Added color-disabled variable and user in progress bar component

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,3 +12,4 @@ $color-primary: blue;
 $color-secondary: green;
 $color-tertiary: orangered;
 $color-card-title: #444;
+$color-disabled: lightgray;
