--- a/assets/scss/components/_progress-bar.scss
+++ b/assets/scss/components/_progress-bar.scss
@@ -28,6 +28,9 @@
     &.is-tertiary {
       background-color: $color-tertiary;
     }
+    &.is-disabled {
+      background-color: $color-disabled;
+    }
     &:after {
       content: "";
       position: absolute;
