--- a/assets/scss/components/_progress-bar.scss
+++ b/assets/scss/components/_progress-bar.scss
@@ -19,6 +19,7 @@
     overflow: hidden;
     box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
       inset 0 -2px 6px rgba(0, 0, 0, 0.4);
+    transition: background-color .5s, width .5s;
     &.is-primary {
       background-color: $color-primary;
     }
