Added transition to icons in goal section

--- a/assets/scss/components/_goal-card.scss
+++ b/assets/scss/components/_goal-card.scss
@@ -21,6 +21,7 @@
         align-items: flex-start;
         &--icon {
             fill: $color-primary;
+            transition: fill .5s;
         }
     }
 }
