--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,4 +1,7 @@
 .header {
+  > img {
+    margin-left: 4rem;
+  }
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -51,7 +54,6 @@
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-    margin-right: 1rem;
   }
   @include responsive(small-bp) {
     align-self: flex-end;
