--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -40,7 +40,7 @@
   align-items: center;
 
   & > * {
-    padding: 0 2rem;
+    padding: 0 1rem;
     cursor: pointer;
     height: 100%;
     display: flex;
@@ -65,6 +65,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  &__user {
+    @include responsive(small-bp) {
+      flex-direction: row-reverse;
+    }
   }
 
   &__user-photo {
