--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -6,15 +6,8 @@
     }
     @include responsive(medium-bp) {
       position: absolute;
-      top: 0;
+      top: 10px;
       left: 10px;
-    }
-    @include responsive(small-bp) {
-      position: absolute;
-      top: initial;
-      left: initial;
-      bottom: 25px;
-      right: 20px;
     }
   }
   display: flex;
@@ -40,11 +33,14 @@
   align-items: center;
 
   & > * {
-    padding: 0 1rem;
+    padding: 0 1.5rem;
     cursor: pointer;
     height: 100%;
     display: flex;
     align-items: center;
+    @include responsive(small-bp) {
+      padding: 0 .8rem;
+    }
   }
 
   &__icon-box {
@@ -69,6 +65,11 @@
   &__user {
     @include responsive(small-bp) {
       flex-direction: row-reverse;
+    }
+  }
+  &__user-name {
+    @include responsive(small-bp) {
+      align-self: flex-end;
     }
   }
 
