Given background image to loan and credit card

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
-$gradient-primary-light: rgb(24, 180, 231);
-$gradient-primary-dark: rgb(65, 65, 224);
-$gradient-tertiary-light: #ff4500;
-$gradient-tertiary-dark: #ff0000;
+$gradient-primary-light: rgba(24, 180, 231, 0.8);
+$gradient-primary-dark: rgba(65, 65, 224, 0.8);
+$gradient-tertiary-light: rgba(255, 68, 0, 0.8);
+$gradient-tertiary-dark: rgba(255, 0, 0, 0.8);
 $grid-width: 90vw;
 $vertical-space: 16rem;
 $horizontal-space: 12rem;
