--- a/assets/scss/components/_goal-card.scss
+++ b/assets/scss/components/_goal-card.scss
@@ -1,5 +1,6 @@
 .goal-card {
     min-height: 150px;
+    width: 93%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
