--- a/assets/scss/components/_goal-card.scss
+++ b/assets/scss/components/_goal-card.scss
@@ -1,6 +1,7 @@
 .goal-card {
     min-height: 150px;
     width: 93%;
+    margin: 3px auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
