--- a/assets/scss/components/_side-bar.scss
+++ b/assets/scss/components/_side-bar.scss
@@ -104,6 +104,7 @@
   @include responsive(large-bp) {
     display: none;
   }
+  margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
